@@ -327,6 +327,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6189: Restored compatibility of subprocess.py with Python 2.2.
+
 - Issue #6287: Added the license field in Distutils documentation.
 
 - Issue #6286: Now Distutils upload command is based on urllib2 instead of
